rootthebox/kubernetes/service-memcache.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: rootthebox
spec:
  type: ClusterIP
  selector:
    app: rootthebox
    tier: app-tier
  ports:
    - name: memcached-udp
      protocol: UDP
      port: 11211
    - name: memcached-tcp
      protocol: TCP
      port: 11211
