rootthebox/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silicon-ctf-ingress
  namespace: rootthebox
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: ""
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - silicon-ctf.party
    secretName: tls-secret
  rules:
  - host: silicon-ctf.party
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rootthebox
            port: 
              number: 80
